--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <p class="white">Tener un 100% en tu asignacion de Khan Academy </p> 
             <p class="white">¿Y otras áreas más? </p>
           </div>
-            <a class="button m-3" href="https://www.instagram.com/pancho007x/" target="_blank" aria-label="Visitar Podemos Aprender en Facebook" tabindex="0">Comienza ahora y Envia mensaje a:</a> 
+            <a class="button m-3" href="https://www.instagram.com/zethx.e/" target="_blank" aria-label="Visitar Podemos Aprender en Facebook" tabindex="0">Comienza ahora y Envia mensaje a:</a> 
           </div>
   
 
@@ -133,7 +133,7 @@
               <img class="card-img-top mb-3" src="https://scontent.xx.fbcdn.net/v/t1.15752-9/431818233_462888789531199_7303925782392948662_n.png?_nc_cat=111&ccb=1-7&_nc_sid=5f2048&_nc_ohc=WEdLAOCp8v0Q7kNvgEuE275&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_Q7cD1QFsp3b4q2Zoqb4viGI5SDg6axLaVzZlOy3m0iQ0V2foGw&oe=665FB285  " alt="">
               </div>
               <div class="card-body">
-                <p class="card-text">Se dejara un 100%-98% al final de la nota se aproxima y ya tendran su 100% en la tarea</p>
+                <p class="card-text">Se dejara un 100%-97% al final de la nota se aproxima y ya tendran su 100% en la tarea</p>
               </div>
             </div>
           </div>
@@ -142,13 +142,13 @@
           <div class="card-container mb-3">
             <div class="card">
               <div class="card-body">
-                <h3 class="card-title text-center">Tienes un 50% 40% 70%</h3>
+                <h3 class="card-title text-center">Tienes un 50%, 65%, 78%,</h3>
               </div>
               <div class="card-body">
               <img class="card-img-top mb-3" src="https://scontent.xx.fbcdn.net/v/t1.15752-9/438051545_1147819849748007_6043934976489828864_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=5f2048&_nc_ohc=uIKjs_tEbn4Q7kNvgEYnogy&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_Q7cD1QE_0nTeZM5ERuPM10JrDgQZg7dlCgJabu1B2ro9b_p0YA&oe=665FC7C3" alt="">
               </div>
               <div class="card-body">
-                <p class="card-text">Si tienes un 65%, 75%, 87%, y tu trabajo esta parecida como en la imagen, te estariamos cobrando Q40 ya que, para sacar el 100%, se necesita tener todos los cuadros en azul y cuando sean obtenidos repetir todo el trabajo para obtener una coronita y asi obtener su 100%</p>
+                <p class="card-text">Si tienes un 50%, 65%, 78%, y tu trabajo esta parecida como en la imagen, te estariamos cobrando Q40 ya que, para sacar el 100%, se necesita tener todos los cuadros en azul y cuando sean obtenidos repetir todo el trabajo para obtener una coronita y asi obtener su 100%</p>
               </div>
             </div>
           </div>
@@ -261,19 +261,19 @@
           </div>
           <div class="col-lg-4 col-md-4 col-12 text-center">
             <h4 class="h4"><b>NEcesitamos Chamba:</b></h4>
-            <a href="https://www.instagram.com/pancho007x/" target="_blank"
+            <a href="https://www.instagram.com/zethx.e/" target="_blank"
                 aria-label="Visitar Podemos Aprender en Facebook" tabindex="0"><i class="fab fa-facebook icon"></i>
               </a>
-              <a href="https://www.instagram.com/pancho007x/" target="_blank"
+              <a href="https://www.instagram.com/zethx.e/" target="_blank"
                 aria-label="Visitar Podemos Aprender en YouTube" tabindex="0"><i class="fab fa-youtube icon"></i>
               </a>
-              <a href="https://www.instagram.com/pancho007x/" target="_blank"
+              <a href="https://www.instagram.com/zethx.e/" target="_blank"
                 aria-label="Visitar Podemos Aprender en Twitter" tabindex="0"><i class="fab fa-twitter icon"></i>
               </a>
-              <a href="https://www.instagram.com/pancho007x/" target="_blank"
+              <a href="https://www.instagram.com/zethx.e/" target="_blank"
                 aria-label="Mandar un email a info@podemosaprender.org" tabindex="0"><i class="far fa-envelope icon"></i>
               </a>
-              <a href="https://www.instagram.com/pancho007x/" target="_blank"
+              <a href="https://www.instagram.com/zethx.e/" target="_blank"
                 aria-label="Participar en github de Podemos Aprender" tabindex="0"><i class="fab fa-github icon"></i>
               </a>
               
